# Flower-exchange

./: .gitignore  CMakeLists.txt  README.md  project structure.txt  walkthrough.md
api-server/: package-lock.json  package.json  server.js
data/: 1000orders.csv  100orders.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  test_case_1_basic.csv  test_case_2_no_match.csv  test_case_3_full_match.csv  test_case_4_partial_match.csv  test_case_5_price_priority.csv  test_case_6_multiple_match.csv  test_case_7_validation.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: axiosClient.js
frontend/src/components/: CSVUpload.jsx  ExecutionReportTable.jsx  Footer.jsx  Navbar.jsx  OrderTable.jsx
frontend/src/pages/: Contact.jsx  Home.jsx  Order.jsx
output/: execution_report.csv
src/: main.cpp
src/exchange/: Exchange.cpp  Exchange.hpp
src/matchingengine/: MatchingEngine.cpp  MatchingEngine.hpp
src/model/: ExecutionReport.hpp  Order.hpp  Trade.hpp
src/orderbook/: OrderBook.cpp  OrderBook.hpp
src/utils/: CSVParser.cpp  CSVParser.hpp  ExecutionReportWriter.cpp  ExecutionReportWriter.hpp
src/validator/: InstrumentValidation.hpp  OrderValidator.cpp  OrderValidator.hpp  PriceValidation.hpp  QuantityValidation.hpp  SideValidation.hpp  ValidationRule.hpp
